# dataclod

./: .rustfmt.toml  .taplo.toml  .typos.toml  Cargo.toml  Makefile.toml  README.md
src/common/telemetry/: Cargo.toml
src/common/telemetry/src/: lib.rs  logging.rs
src/core/: Cargo.toml
src/core/src/: context.rs  lib.rs  memory_pool.rs  parser.rs  state.rs
src/core/src/datasource/: postgres.rs  types.rs
src/core/src/expr/: mod.rs
src/core/src/expr/udtf/: duckdb_scan.rs  mod.rs  mysql_scan.rs  postgres_scan.rs  sqlite_scan.rs
src/core/src/rewrite/: mod.rs  postgres_stmt.rs
src/datafusion-extra/: Cargo.toml
src/datafusion-extra/catalog/: Cargo.toml
src/datafusion-extra/catalog/src/: lib.rs
src/datafusion-extra/catalog/src/postgres/: mod.rs  pg_class.rs  pg_database.rs  pg_description.rs  pg_get_expr_udf.rs  pg_get_partkeydef_udf.rs
src/datafusion-extra/spatial/: Cargo.toml
src/datafusion-extra/spatial/src/: extension.rs  lib.rs  option.rs  statistics.rs  utils.rs
src/datafusion-extra/spatial/src/function/: bbox_intersects.rs  box2d.rs  geom_from_ewkt.rs  geom_from_text.rs  intersects.rs  mod.rs  st_area.rs  st_asewkt.rs  st_asgeojson.rs  st_asmvtgeom.rs  st_astext.rs  st_boundary.rs  st_buffer.rs  st_buildarea.rs  st_centroid.rs  st_concavehull.rs  st_contains.rs  st_convexhull.rs  st_coveredby.rs  st_covers.rs  st_difference.rs  st_distance.rs  st_dwithin.rs  st_envelope.rs  st_equals.rs  st_geometrytype.rs  st_geomfromewkb.rs  st_geomfromewkt.rs  st_geomfromgeojson.rs  st_geomfromtext.rs  st_geomfromwkb.rs  st_intersection.rs  st_intersects.rs  st_isempty.rs  st_isvalid.rs  st_length.rs  st_makeenvelope.rs  st_makepoint.rs  st_makevalid.rs  st_npoints.rs  (+21 more)
src/datafusion-extra/spatial/src/geo_ext/: mod.rs  to_geo.rs  trait_ext.rs
src/datafusion-extra/spatial/src/geometry/: analyze.rs  bounding_box.rs  bounds.rs  interval.rs  types.rs
src/datafusion-extra/spatial/src/geos_ext/: mod.rs  trait_ext.rs  wkb_to_geos.rs
src/datafusion-extra/spatial/src/join/: build_index.rs  exec.rs  mod.rs  operand_evaluator.rs  optimizer.rs  option.rs  prepare.rs  spatial_predicate.rs  stream.rs
src/datafusion-extra/spatial/src/join/evaluated_batch/: evaluate.rs  mod.rs  spill.rs
src/datafusion-extra/spatial/src/join/index/: build_side_collector.rs  memory_plan.rs  mod.rs  partitioned_index_provider.rs  spatial_index.rs  spatial_index_builder.rs
src/datafusion-extra/spatial/src/join/partitioning/: flat.rs  kdb.rs  mod.rs  partition_slots.rs  rtree.rs  stream_repartitioner.rs  util.rs
src/datafusion-extra/spatial/src/join/planner/: logical_plan_node.rs  mod.rs  optimizer.rs  physical_planner.rs  probe_shuffle_exec.rs  spatial_expr_utils.rs
src/datafusion-extra/spatial/src/join/probe/: first_pass_stream.rs  mod.rs  non_partitioned_stream.rs  partitioned_stream_provider.rs
src/datafusion-extra/spatial/src/join/refine/: exec_mode_selector.rs  geo.rs  geos.rs  mod.rs  tg.rs
src/datafusion-extra/spatial/src/join/utils/: arrow_utils.rs  bbox_sampler.rs  disposable_async_cell.rs  init_once_array.rs  join_utils.rs  mod.rs  spill.rs
src/datafusion-extra/sqlbuiltin/: Cargo.toml
src/datafusion-extra/sqlbuiltin/src/: lib.rs
src/datafusion-extra/sqlbuiltin/src/udf/: current_schema.rs  version.rs
src/datafusion-extra/src/: lib.rs
src/datafusion-extra/src/catalog/postgres/: mod.rs  pg_class.rs  pg_database.rs  pg_description.rs  pg_namespace.rs  pg_type.rs
src/datafusion-extra/src/catalog/postgres/utils/: pg_type.rs
src/datafusion-extra/src/spatial/: mod.rs  statistics.rs
src/datafusion-extra/src/spatial/function/: geom_from_ewkt.rs  geom_from_text.rs  geos_ext.rs  intersects.rs  mod.rs
src/datafusion-extra/src/spatial/geometry/: analyze.rs  bounding_box.rs  bounds.rs  interval.rs  mod.rs  point_count.rs  types.rs
src/datafusion-extra/src/spatial/geos_ext/: geom_ext.rs  wkb_to_geos.rs
src/datafusion-extra/src/spatial/join/: build_index.rs  concurrent_reservation.rs  exec.rs  index.rs  init_once_array.rs  mod.rs  once_fut.rs  operand_evaluator.rs  optimizer.rs  option.rs  prep_geom_array.rs  spatial_predicate.rs  stream.rs  utils.rs  wkb_array.rs
src/datafusion-extra/src/spatial/join/evaluated_batch/: mod.rs
src/datafusion-extra/src/spatial/join/index/: build_side_collector.rs  mod.rs  spatial_index.rs  spatial_index_builder.rs
src/datafusion-extra/src/spatial/join/refine/: exec_mode_selector.rs  geos.rs  mod.rs
src/datafusion-extra/src/sqlbuiltin/: mod.rs
src/datafusion-extra/src/sqlbuiltin/udf/: array_upper.rs  current_schema.rs  current_schemas.rs  format_type.rs  mod.rs  version.rs
src/datafusion-extra/src/sqlbuiltin/udtf/: generate_series.rs  mod.rs
src/datafusion-extra/udf-macros/: Cargo.toml
src/datafusion-extra/udf-macros/src/: analyze.rs  codegen.rs  lib.rs  parser.rs  struct_type.rs  types.rs  utils.rs
src/datafusion-util/: Cargo.toml
src/datafusion-util/src/: lib.rs  udtf.rs
src/datafusion-util/src/catalog/postgres/: mod.rs  pg_type.rs
src/datafusion-util/src/information_schema/postgres/: pg_namespace.rs
src/datafusion-util/src/sqlbuiltin/: mod.rs
src/datafusion-util/src/sqlbuiltin/udf/: array_upper.rs  mod.rs  version.rs
src/datafusion-util/src/sqlbuiltin/udtf/: generate_series.rs  mod.rs
src/query/: Cargo.toml
src/query/src/: context.rs  lib.rs  parser.rs
src/query/src/datasource/: mod.rs  postgres.rs  types.rs
src/query/src/expr/udtf/: mod.rs  postgres_scan.rs
src/server/: Cargo.toml
src/server/src/postgres/: auth.rs  auth_source.rs  handler.rs  handler_factory.rs  make_handler.rs  mod.rs  parser.rs  query_handler.rs  query_parser.rs  server.rs  startup_handler.rs  types.rs  utils.rs
src/server/src/postgres/types/: decimal.rs  interval.rs
src/sqllogictest/: Cargo.toml  README.md
src/sqllogictest/src/: filters.rs  lib.rs  test_context.rs  util.rs
src/sqllogictest/src/engines/: conversion.rs  currently_executed_sql.rs  mod.rs  output.rs
src/sqllogictest/src/engines/datafusion_engine/: error.rs  mod.rs  normalize.rs  runner.rs
src/sqllogictest/test_files/: spatial_udf.slt
tests/: README.md  (+2 more)
(+16 files in other folders)
