[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["xhwhis <hi@whis.me>"]
description = "[WIP] DataClod"
homepage = "https://github/dataclod"
repository = "https://github.com/dataclod/dataclod"
license = "Unlicense"

[workspace]
members = ["src/bin", "src/datafusion-extra", "src/query", "src/server"]
resolver = "2"

[workspace.lints.rust]
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_tuple_struct_fields = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
doc_markdown = "warn"
empty_structs_with_brackets = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
get_unwrap = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
used_underscore_binding = "warn"

[workspace.dependencies]
# workspace dependencies
datafusion-extra = { path = "src/datafusion-extra", version = "0.0.2" }
query = { package = "dataclod-query", path = "src/query", version = "0.0.2" }
server = { package = "dataclod-server", path = "src/server", version = "0.0.2" }

# crates.io dependencies
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4.31"
dashmap = "5.5"
datafusion = { version = "35.0", features = ["serde"] }
futures = "0.3.29"
num-traits = "0.2.17"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1.40"
