[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["xhwhis <hi@whis.me>"]
description = "[WIP] DataClod"
homepage = "https://github/dataclod"
repository = "https://github.com/dataclod/dataclod"
license = "Unlicense"

[workspace]
members = [
  "src/bin",
  "src/common/exception",
  "src/common/telemetry",
  "src/common/utils",
  "src/core",
  "src/datafusion-extra",
  "src/server",
]
resolver = "2"

[workspace.lints.rust]
macro_use_extern_crate = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
doc_markdown = "warn"
empty_structs_with_brackets = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
get_unwrap = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
uninlined_format_args = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
used_underscore_binding = "warn"

[workspace.dependencies]
# workspace dependencies
common-exception = { path = "src/common/exception", version = "0.0.2" }
common-telemetry = { path = "src/common/telemetry", version = "0.0.2" }
common-utils = { path = "src/common/utils", version = "0.0.2" }
dataclod = { path = "src/core", version = "0.0.2" }
datafusion-extra = { path = "src/datafusion-extra", version = "0.0.2" }
server = { package = "dataclod-server", path = "src/server", version = "0.0.2" }

# crates.io dependencies
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
datafusion = { version = "42.0", features = ["serde"] }
datafusion-table-providers = { version = "0.2.2", features = [
  "duckdb",
  "mysql",
  "postgres",
  "sqlite",
] }
duckdb = "1.1.1"
futures = "0.3"
num-traits = "0.2"
tikv-jemallocator = "0.6"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
