[package]
name = "dataclod"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
datafusion.workspace = true
datafusion-extra.workspace = true
datafusion-table-providers.workspace = true
spiceai_duckdb_fork.workspace = true
tokio.workspace = true
