[package]
name = "dataclod"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
datafusion.workspace = true
datafusion-extra.workspace = true
datafusion-table-providers.workspace = true
duckdb.workspace = true
parking_lot.workspace = true
tokio.workspace = true
