[package]
name = "datafusion-extra"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
common-utils.workspace = true
datafusion.workspace = true
geos = { git = "https://github.com/georust/geos.git", rev = "47afbad2483e489911ddb456417808340e9342c3", features = [
  "v3_13_0",
] }
libc = "0.2"
proj4rs = "0.1.9"
