[package]
name = "datafusion-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
datafusion.workspace = true
async-trait.workspace = true
postgres-types = "0.2.6"
anyhow.workspace = true
