[package]
name = "datafusion-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
datafusion.workspace = true
futures.workspace = true
num-traits = "0.2.17"
postgres-types = "0.2.6"
