[package]
name = "dataclod-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
datafusion.workspace = true
datafusion-extra.workspace = true
