[package]
name = "dataclod-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
datafusion-extra.workspace = true
datafusion.workspace = true
futures.workspace = true
tokio-postgres = "0.7.10"
tokio.workspace = true
tracing.workspace = true
