[package]
name = "dataclod-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes = "1.10"
chrono.workspace = true
dataclod.workspace = true
datafusion.workspace = true
duplicate = "2.0"
futures.workspace = true
num-traits.workspace = true
pgwire = "0.28.0"
postgres-types = "0.2"
rand = "0.9"
rust_decimal = "1.37"
tokio.workspace = true
tracing.workspace = true
