[package]
name = "dataclod-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes = "1"
chrono.workspace = true
dataclod.workspace = true
datafusion.workspace = true
duplicate = "2.0"
futures.workspace = true
num-traits.workspace = true
pg_interval = "0.4.2"
pgwire = "0.36.3"
postgres-types = "0.2"
rand = "0.9"
rust_decimal = "1"
tokio.workspace = true
tracing.workspace = true
