[package]
name = "dataclod-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
dataclod.workspace = true
datafusion.workspace = true
duplicate = "2.0"
futures.workspace = true
num-traits.workspace = true
pg_interval = "0.4"
pgwire = "0.38"
postgres-types = "0.2"
rand = "0.10"
rust_decimal = "1"
tokio.workspace = true
tracing.workspace = true
