[package]
name = "common-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[features]
console = ["console-subscriber"]

[dependencies]
console-subscriber = { version = "0.5.0", optional = true }
tracing.workspace = true
tracing-appender = "0.2"
tracing-subscriber = "0.3"
