[package]
name = "datafusion-spatial"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
byteorder = "1.5.0"
datafusion.workspace = true
float_next_after = "1.0.0"
futures.workspace = true
geo = "0.32.0"
geo-index = "0.3.2"
geo-traits = "0.3.0"
geo-types = "0.7.18"
geos = { git = "https://github.com/georust/geos.git", rev = "47afbad2483e489911ddb456417808340e9342c3", features = [
  "v3_12_0",
] }
libc = "0.2"
parking_lot.workspace = true
proj4rs = "0.1.9"
regex = "1"
sedona-tg = "0.2.0"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.16"
wkb = "0.9.2"
