[package]
name = "datafusion-spatial"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
byteorder = "1.5"
datafusion.workspace = true
datafusion-udf-macros.workspace = true
fastrand = "2.3"
float_next_after = "2.0"
futures.workspace = true
geo = "0.32.0"
geo-index = "0.3.4"
geo-traits = "0.3.0"
geo-types = "0.7.18"
geos = { version = "11.1.1", features = ["v3_12_0"] }
geozero = { version = "0.15.1", default-features = false, features = [
  "with-wkb",
  "with-geo",
] }
itertools = "0.14"
libc = "0.2"
lwgeom = { version = "0.2.1", features = ["mvt"] }
parking_lot.workspace = true
pin-project-lite = "0.2"
proj4rs = { version = "0.1.9", features = ["crs-definitions"] }
regex.workspace = true
serde = "1.0"
serde_json = "1.0"
serde_with = "3"
tg-geom = { version = "0.0.0", features = ["mimalloc"] }
tokio.workspace = true
tracing.workspace = true
wkb = "0.9.2"
